# econavigate_FastApi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
econavigate/: __init__.py  cache.py  config.py  cost_factors.py  errors.py  green_areas.py  main.py  models.py  scoring.py  service.py  upstream.py  waypoints.py
tests/: test_api.py  test_cache.py  test_cost_factors.py  test_green_areas.py  test_scoring.py  test_service.py  test_upstream.py  test_waypoints.py
